# backendtest

./: .env  .env.backup  .env.example  .env.template  .env.test  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  API_DOCUMENTATION.md  API_ENDPOINTS.md  BACKEND_IMPLEMENTATION_GUIDE.md  BODY_PARTS_IMPLEMENTATION.md  BODY_PARTS_IMPLEMENTATION_COMPLETE.md  CLEANUP_SUMMARY.md  COMPLETE_DATA_ANALYSIS.md  CREW_AGENTS_README.md  DATA_GENERATION_ANALYSIS.md  DEPLOYMENT_READY_REPORT.md  DEPLOYMENT_SUMMARY.md  Dockerfile  FINAL_IMPLEMENTATION_VERIFICATION.md  GIT_COMMIT_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  LLM_EXTRACTION_IMPLEMENTATION.md  LLM_IMPLEMENTATION_SUMMARY.md  PROJECT_ORGANIZATION.md  README-ENHANCED.md  README.md  REDUNDANT_FILES_REMOVAL.md  SETUP.md  SYSTEMD_README.md  TESTING.md  app-enhanced.js  app.js  auth.html  backend_RAG.dockerfile  complete_user_journey_test.py  debug.html  docker-compose.yml  (+35 more)
deployment/: README.md  start.sh
docs/: API.md  API_DOCUMENTATION.md  API_PURPOSE.md  API_SIMPLE.md  AUTHENTICATION.md  COMPREHENSIVE_TEST_REPORT.md  DEPLOYMENT.md  DEVELOPMENT.md  DOCS.md  IMPLEMENTATION_COMPLETE.md  JWT_AUTH_IMPLEMENTATION.md  PRODUCTION_README.md  RAG_TESTING_REPORT.md  README.md
js/: agent-tester.js  api.js  auth.js  chat.js  config.js  dashboard.js  digital-twin-api.js  digital-twin-config.js  documents.js  main.js
scripts/: README.md  comprehensive_refactor.py  final_verification.py  quick_verify.py  refactor_admin.py  refactor_timeline.py  refactor_upload.py  validate_patient_id_implementation.py
src/: __init__.py  main.py
src/agents/: __init__.py  aggregator_agent.py  base_specialist.py  cardiologist_agent.py  expert_router.py  general_physician_agent.py  ingestion_agent.py  neurologist_agent.py  orchestrator_agent.py  orthopedist_agent.py  timeline_builder_agent.py
src/agents/crew_agents/: __init__.py  clinical_extractor_agent.py  document_reader_agent.py  medical_crew.py  storage_coordinator_agent.py  vector_embedding_agent.py
src/api/: __init__.py  router.py
src/api/endpoints/: __init__.py  anatomy.py  auth.py  auth_old.py  chat.py  documents.py  events.py  expert_opinion.py  openai_compat.py  openai_compatible.py  timeline.py  tools.py  upload.py
src/api/v1/: __init__.py  router.py
src/api/v1/endpoints/: __init__.py  admin.py  admin_old.py  analytics.py  anatomy.py  chat.py  documents.py  events.py  expert_opinion.py  knowledge_base.py  medical_analysis.py  openai_compat.py  openai_compatible.py  system_info.py  timeline.py  tools.py  upload.py  user_profile.py
src/auth/: __init__.py  dependencies.py  example.py  jwt_auth.py  middleware.py  models.py
src/chat/: __init__.py  history.py  long_term.py  short_term.py
src/config/: __init__.py  body_parts.py  settings.py
src/db/: __init__.py  milvus_db.py  mongo_db.py  neo4j_db.py  redis_db.py  redis_db_new.py
src/memory/: __init__.py  long_term.py  memory_manager.py  redis_client.py  short_term.py
src/middleware/: request_logging.py  user_initialization.py
src/prompts/: __init__.py  aggregator_prompt.json  cardiologist_prompt.json  entities.json  general_physician_prompt.json  neurologist_prompt.json  ocr.json  orchestrator_prompt.json  orthopedist_prompt.json
src/tools/: __init__.py  document_db.py  knowledge_graph.py  pdf_extractor.py  vector_store.py  web_search.py
src/utils/: __init__.py  logging.py  medical_terminology.py  patient_id.py  schema.py
styles/: auth.css  dashboard.css  main.css
tests/: README.md  __init__.py  conftest.py  requirements.txt  test_all_endpoints.py  test_endpoints_comprehensive.py  test_openai_functionality.py  test_production_suite.py  test_rag_pipeline.py
tests/integration/: __init__.py  test_api.py  test_api_endpoints.py  test_api_integration.py
tests/unit/: __init__.py  test_agents.py  test_auth.py  test_database.py  test_models.py  test_prompt_manager.py  test_prompts.py  test_timeline.py
