[project]
name = "backend-rag"
version = "0.1.0"
description = "Backend requiremnts for this RAG."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic-settings>=2.9.1",
    "agentops==0.4.9",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.11.18",
    "aiosignal==1.3.2",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "appdirs==1.4.4",
    "asgiref==3.8.1",
    "asttokens==3.0.0",
    "async-timeout==4.0.3",
    "attrs==25.3.0",
    "auth0-python==4.9.0",
    "backoff==2.2.1",
    "bcrypt==4.3.0",
    "blinker==1.9.0",
    "build==1.2.2.post1",
    "cachetools==5.5.2",
    "certifi==2025.4.26",
    "cffi==1.17.1",
    "charset-normalizer==3.4.2",
    "chromadb==1.0.8",
    "click==8.1.8",
    "coloredlogs==15.0.1",
    "crewai==0.118.0",
    "cryptography==44.0.3",
    "dataclasses-json==0.6.7",
    "decorator==5.2.1",
    "deprecated==1.2.18",
    "distro==1.9.0",
    "dnspython==2.7.0",
    "docstring-parser==0.16",
    "durationpy==0.9",
    "et-xmlfile==2.0.0",
    "exceptiongroup==1.2.2",
    "executing==2.2.0",
    "fastapi==0.115.9",
    "filelock==3.18.0",
    "flatbuffers==25.2.10",
    "frozenlist==1.6.0",
    "fsspec==2025.3.2",
    "google-auth==2.40.0",
    "googleapis-common-protos==1.70.0",
    "greenlet==3.2.3",
    "grpcio==1.71.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "httpx-sse==0.4.0",
    "huggingface-hub==0.30.2",
    "humanfriendly==10.0",
    "idna==3.10",
    "importlib-metadata==8.6.1",
    "importlib-resources==6.5.2",
    "instructor==1.7.9",
    "ipython==8.36.0",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "jiter==0.8.2",
    "json-repair==0.44.1",
    "json5==0.12.0",
    "jsonpatch==1.33",
    "jsonpickle==4.0.5",
    "jsonpointer==3.0.0",
    "jsonref==1.1.0",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2025.4.1",
    "kubernetes==32.0.1",
    "langchain==0.3.25",
    "langchain-community==0.3.24",
    "langchain-core==0.3.64",
    "langchain-openai==0.3.21",
    "langchain-text-splitters==0.3.8",
    "langsmith==0.3.45",
    "litellm==1.67.1",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "marshmallow==3.26.1",
    "matplotlib-inline==0.1.7",
    "mdurl==0.1.2",
    "milvus==2.3.5",
    "mmh3==5.1.0",
    "mpmath==1.3.0",
    "multidict==6.4.3",
    "mypy-extensions==1.1.0",
    "neo4j==5.28.1",
    "networkx==3.4.2",
    "numpy==2.2.5",
    "oauthlib==3.2.2",
    "onnxruntime==1.21.1",
    "openai==1.77.0",
    "openpyxl==3.1.5",
    "opentelemetry-api==1.32.1",
    "opentelemetry-exporter-otlp-proto-common==1.32.1",
    "opentelemetry-exporter-otlp-proto-grpc==1.32.1",
    "opentelemetry-exporter-otlp-proto-http==1.32.1",
    "opentelemetry-instrumentation==0.53b1",
    "opentelemetry-instrumentation-asgi==0.53b1",
    "opentelemetry-instrumentation-fastapi==0.53b1",
    "opentelemetry-proto==1.32.1",
    "opentelemetry-sdk==1.32.1",
    "opentelemetry-semantic-conventions==0.53b1",
    "opentelemetry-util-http==0.53b1",
    "ordered-set==4.1.0",
    "orjson==3.10.18",
    "overrides==7.7.0",
    "packaging==24.2",
    "parso==0.8.4",
    "pdfminer-six==20250327",
    "pdfplumber==0.11.6",
    "pexpect==4.9.0",
    "pillow==11.2.1",
    "posthog==4.0.1",
    "prompt-toolkit==3.0.51",
    "propcache==0.3.1",
    "protobuf==5.29.4",
    "psutil==6.0.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pycparser==2.22",
    "pydantic==2.11.4",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.9.1",
    "pygments==2.19.1",
    "pyjwt==2.10.1",
    "pymongo==4.13.0",
    "motor>=3.3.0",
    "pypdfium2==4.30.1",
    "pypika==0.48.9",
    "pyproject-hooks==1.2.0",
    "pytesseract==0.3.13",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "python-multipart==0.0.20",
    "pytz==2025.2",
    "pyvis==0.3.2",
    "pyyaml==6.0.2",
    "redis==6.1.0",
    "aioredis>=2.0.0",
    "referencing==0.36.2",
    "regex==2024.11.6",
    "requests==2.32.3",
    "requests-oauthlib==2.0.0",
    "requests-toolbelt==1.0.0",
    "rich==13.9.4",
    "rpds-py==0.24.0",
    "rsa==4.9.1",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.41",
    "stack-data==0.6.3",
    "starlette==0.45.3",
    "sympy==1.14.0",
    "tenacity==9.1.2",
    "termcolor==2.4.0",
    "tiktoken==0.9.0",
    "tokenizers==0.21.1",
    "tomli==2.2.1",
    "tomli-w==1.2.0",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "typer==0.15.3",
    "typing-extensions==4.13.2",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.0",
    "urllib3==2.4.0",
    "uv==0.7.2",
    "uvicorn==0.34.2",
    "uvloop==0.21.0",
    "watchfiles==1.0.5",
    "wcwidth==0.2.13",
    "websocket-client==1.8.0",
    "websockets==15.0.1",
    "wrapt==1.17.2",
    "yarl==1.20.0",
    "zipp==3.21.0",
    "zstandard==0.23.0",
    "pymilvus>=2.4.9",
    "setuptools==80.9.0",
    "pymupdf>=1.26.0",
    "aiofiles>=24.1.0",
    "sse-starlette>=2.3.6",
    # Test dependencies
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.24.0",
    "pytest-mock>=3.10.0",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml",
    "--cov-fail-under=80",
    "-v",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "database: marks tests that require database connections",
    "api: marks tests for API endpoints",
    "agents: marks tests for agent functionality",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
asyncio_mode = "auto"

[tool.uv]
dev-dependencies = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "debugpy>=1.8.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
